# MyPersonalSite

./: .gitignore  README.md  forms.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: flask_ci.yml
static/css/: styles.css
static/images/: AW_Report.pbix  MM_Report.pbix
templates/: aboutme.html  addproject.html  adminlogin.html  allprojects.html  contactme.html  footer.html  header.html  index.html  project.html  registeradmin.html
